--- a/one/src/main/resources/application.yaml
+++ b/one/src/main/resources/application.yaml
@@ -5,6 +5,7 @@ spring:
 server:
     port: 8001
 
-app-two:
-  ribbon:
-    listOfServers: localhost:8001, localhost:8002
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
